[metadata]
name = plover_braille
version = 2.0.0
description = Plover plugin for Braille writing
long_description = file:README.md
long_description_content_type = text/markdown
author = Emily Easteal
author_email = emily@easteal.dev
url = https://github.com/EPLHREU/plover-braille
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
install_requires =
  plover
py_modules =
  plover_braille

[options.entry_points]
plover.system =
 Braille = braille
plover.meta = 
 brailleFormat = brailleFormat:format
